--- a/01_exploratory_data_analysis.Rmd
+++ b/01_exploratory_data_analysis.Rmd
@@ -1,7 +1,5 @@
 ---
 title: "Exploratory Data Analysis"
-author: "Stefan J. Schmidt"
-date: "12/31/2019"
 output: html_document
 ---
 
@@ -9,22 +7,26 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+**Data** exists in two tyes:
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+* **unstructured** data - text, image, video, clickstream
+* **structured** data - strings, numbers
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
 
-```{r cars}
-summary(cars)
+**Unstructured data** can be devided in:
+
+* **numbers**
+* **categorical** data
+
+
+**Numeric data** comes in two forms:
+
+* **discrete** (integers)
+* **continuous**
+
+
+
+```{r}
+
+
 ```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
